# trovus

./: .gitignore  README.md  pyproject.toml
assets/: trovus.tape
model_cards/: Qwen_Qwen3-0.6B_card.md  microsoft_deberta-v3-large_card.md  microsoft_deberta-v3-small_card.md  microsoft_deberta-xlarge-mnli_card.md  unsloth_gemma-3-270m_card.md
src/trovus/: __init__.py  __main__.py  card_parser.py  cli.py  download.py  model_manager.py
src/trovus/evaluate/: __init__.py  cot_distillation.py  rl_trainer.py  sft_runner.py  utils.py
